--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color:#169c39!important;
         }
         .banner{
-            background-image: url('image/IMG-20190530-WA0017.jpg');
+            background-image: url('./image/IMG-20190530-WA0005.jpg');
             background-size: cover;
             background-position: center;
             height:450px;
