--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="banner p-5">
         <div style="text-shadow: 3px 2px 5px black; margin-top: 80px;" class="container text-white">
-            <p class="m-0">Selamat Datang Di Situs Resmi</p>
+            <p class="m-0">Selamat Datang Di Website Resmi</p>
             <h1 class="">Pondok Pesantren <br> AN-NUR Dukuhdalem</h1>
         </div>
     </div>
