--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Pondok Pesantren An-Nur Dukuhdalem</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-  <style>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
+ <style>
         .bg-success {
             background-color:#169c39!important;
         }
@@ -65,8 +70,8 @@
 
     <div class="banner p-5">
         <div style="text-shadow: 3px 2px 5px black; margin-top: 100px;" class="container text-white">
-            <p class="m-0">Selamat Datang Di Website Resmi</p>
-            <h1 class="">Pondok Pesantren <br> AN-NUR Dukuhdalem</h1>
+            <p class="m-0 animate__animated animate__fadeInTopLeft">Selamat Datang Di Website Resmi</p>
+            <h1 class="animate__animated animate__fadeInTopLeft">Pondok Pesantren <br> AN-NUR Dukuhdalem</h1>
         </div>
     </div>
 
@@ -86,9 +91,9 @@
                 <h2 class="">Profil</h2>
                
                 <div class="text-center mb-3">
-                    <img class="img_logo" src="image/logo_smp.jpeg" alt="">
-                    <img class="img_logo" src="image/logo_ponpes.jpeg" alt="">
-                    <img class="img_logo" src="image/logo_sma.jpeg" alt="">
+                    <img class="img_logo animate__animated animate__fadeInDown" src="image/logo_smp.jpeg" alt="">
+                    <img class="img_logo animate__animated animate__fadeInDown" src="image/logo_ponpes.jpeg" alt="">
+                    <img class="img_logo animate__animated animate__fadeInDown" src="image/logo_sma.jpeg" alt="">
                 </div>
                 <h4 class="text-secondary">"Terbentuknya Insan yang Unggul dalam Prestasi dengan dilandasi IMTAQ (Iman dan Taqwa) dan IPTEK (Ilmu Pengetahuan dan Teknologi)"</h4>
 
@@ -108,7 +113,7 @@
                         <p class="fst-italic fw-bold">KH. Drs. Yoyon Sufyan, M.Pd.</p>
                     </div>
                     <div class="col-md-5">
-                        <img src="image/IMG-20190611-WA0008.jpg" class="w-100 shadow rounded" alt="">
+                        <img src="image/IMG-20190611-WA0008.jpg" class="w-100 shadow rounded animate__animated animate__fadeInDown" alt="">
                     </div>
                 </div>
             </div>
