--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </nav>
 
-    <a href="https://wa.me/82121597366?text=" target="_blank" class="bubble btn btn-lg btn-success rounded-circle shadow">
+    <a href="https://wa.me/82121597366?text="  class="bubble btn btn-lg btn-success rounded-circle shadow">
         <i style="font-size:40px;" class="fab fa-whatsapp"></i>
     </a>
 
@@ -494,8 +494,8 @@
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-facebook-f"></i> <a class="text-success" href="https://www.facebook.com/ponpes.annur.58" target="_blank">Ponpes Annur Kuningan</a> </p> 
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-instagram"></i>  <a class="text-success" href="https://www.instagram.com/ppannur_kuningan" target="_blank">ppannur_kuningan</a> </p> 
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fa fa-envelope"></i>  <a class="text-success" href="mailto:ppannurdukuhdalem@gmail.com" target="_blank">ppannurdukuhdalem@gmail.com</a> </p> 
-                        <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-whatsapp"></i>   <a class="text-success" href="https://wa.me/82121597366?text=" target="_blank">(+62) 821-2159-7366</a> </p> 
-                        <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-whatsapp"></i>   <a class="text-success" href="https://wa.me/81324270899?text=" target="_blank">(+62) 813-2427-0899</a> </p> 
+                        <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-whatsapp"></i>   <a class="text-success" href="https://wa.me/82121597366?text=" >(+62) 821-2159-7366</a> </p> 
+                        <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-whatsapp"></i>   <a class="text-success" href="https://wa.me/81324270899?text=" >(+62) 813-2427-0899</a> </p> 
                     </div>
                 </div>
             </div>
