--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <a href="" class="nav-link">SMAIT SYARIF HIDAYATULLAH</a>
                 </li> -->
                 <li class="nav-item">
-                    <a href="http://bit.ly/DaftarAnnur" target="_blank"
+                    <a href="http://bit.ly/Daftarsyarif_hidayatullah" target="_blank"
                         class="nav-link bg-success text-white rounded">PENDAFTAR SANTRI ONLINE</a>
                 </li>
             </ul>
@@ -150,8 +150,8 @@
                         <p class="fst-italic fw-bold">KH. Drs. Yoyon Sufyan, M.Pd.</p>
                     </div>
                     <div class="col-md-5">
-                        <img src="image/IMG-20190611-WA0008.jpg"
-                            class="w-100 shadow rounded animate__animated animate__fadeInDown" alt="">
+                        <img src="image/photo_1.jpg" class="w-100 shadow rounded animate__animated animate__fadeInDown"
+                            alt="">
                     </div>
                 </div>
             </div>
@@ -227,23 +227,23 @@
                                 <tr>
                                     <td>1</td>
                                     <td>2012</td>
-                                    <td>Juara 1 Lomba MTQ Tingkat Kabupaten Kuningan</td>
+                                    <td>Juara 1 Lomba MTQ Tingkat Kabupaten grobogan</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
                                     <td>2012</td>
-                                    <td>Juara 2 Lomba Drumband Tingkat Kabupaten Kuningan</td>
+                                    <td>Juara 2 Lomba Drumband Tingkat Kabupaten grobogan</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>2012</td>
-                                    <td>Juara 2 Lomba Story Telling Tingkat Kabupaten Kuningan</td>
+                                    <td>Juara 2 Lomba Story Telling Tingkat Kabupaten grobogan</td>
                                 </tr>
 
                                 <tr>
                                     <td>4</td>
                                     <td>2013</td>
-                                    <td>Juara 4 Lomba Sastra Sunda Tingkat Kabupaten Kuningan</td>
+                                    <td>Juara 4 Lomba Sastra Sunda Tingkat Kabupaten grobogan</td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
@@ -254,13 +254,13 @@
                                 <tr>
                                     <td>6</td>
                                     <td>2013</td>
-                                    <td>Juara Harapan 1 Lomba Cerdas Cermat Tingkat Kabupaten Kuningan</td>
+                                    <td>Juara Harapan 1 Lomba Cerdas Cermat Tingkat Kabupaten grobogan</td>
                                 </tr>
 
                                 <tr>
                                     <td>7</td>
                                     <td>2015</td>
-                                    <td>Juara Harapan 1 Lomba Pidato B.Arab Tingkat Kabupaten Kuningan</td>
+                                    <td>Juara Harapan 1 Lomba Pidato B.Arab Tingkat Kabupaten grobogan</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -511,20 +511,20 @@
                             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                         <a target="_blank"
-                            href="https://www.google.com/maps?ll=-6.968643,108.562811&z=18&t=m&hl=id&gl=ID&mapclient=embed&daddr=Pondok+Pesantren+SYARIF HIDAYATULLAH+Dukuhdalem+Jl.Balai+Dukuhdalem+Ciawigebang,+Kabupaten+Kuningan,+Jawa+Barat+45591@-6.968642999999999,108.5628112"
+                            href="https://www.google.com/maps?ll=-6.968643,108.562811&z=18&t=m&hl=id&gl=ID&mapclient=embed&daddr=Pondok+Pesantren+SYARIF HIDAYATULLAH+Dukuhdalem+Jl.Balai+Dukuhdalem+Ciawigebang,+Kabupaten+grobogan,+Jawa+Barat+45591@-6.968642999999999,108.5628112"
                             class="btn w-100 btn-success"><i class="fa fa-map-signs"></i> Rute</a>
                     </div>
                     <div class="col-md-6 ">
                         <h3 class="text-success">Kontak:</h3>
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-facebook-f"></i> <a
-                                class="text-success" href="https://www.facebook.com/ponpes.annur.58"
-                                target="_blank">Ponpes Annur Kuningan</a> </p>
+                                class="text-success" href="https://www.facebook.com/ponpes.syarif_hidayatullah.58"
+                                target="_blank">Ponpes syarif_hidayatullah grobogan</a> </p>
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-instagram"></i> <a
-                                class="text-success" href="https://www.instagram.com/ppannur_kuningan"
-                                target="_blank">ppannur_kuningan</a> </p>
+                                class="text-success" href="https://www.instagram.com/ppsyarif_hidayatullah"
+                                target="_blank">ppsyarif_hidayatullah</a> </p>
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fa fa-envelope"></i> <a
-                                class="text-success" href="mailto:ppannurdukuhdalem@gmail.com"
-                                target="_blank">ppannurdukuhdalem@gmail.com</a> </p>
+                                class="text-success" href="mailto:ppsyarif_hidayatullahdukuhdalem@gmail.com"
+                                target="_blank">ppsyarif_hidayatullahdukuhdalem@gmail.com</a> </p>
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-whatsapp"></i> <a
                                 class="text-success" href="https://wa.me/82121597366?text=">(+62) 821-2159-7366</a> </p>
                         <p style="font-size:20px;" class="mb-2 text-success"><i class="fab fa-whatsapp"></i> <a
