--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             mempersiapkan masa depannya perlu mendapat perhatian penuh mengingat arus globalisasi sangat
                             besar terhadap perkembangan mereka. Untuk itu kehadiran lembaga pendidikan Islam mutlak
                             diperlukan."</h5>
-                        <p class="fst-italic fw-bold">KH. Drs. Yoyon Sufyan, M.Pd.</p>
+                        <p class="fst-italic fw-bold">Habib Hasyim Bin Muhammad Ba'alawi</p>
                     </div>
                     <div class="col-md-5">
                         <img src="image/photo_1.jpg" class="w-100 shadow rounded animate__animated animate__fadeInDown"
@@ -507,11 +507,11 @@
                 <div class="row">
                     <div class="col-md-6">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d990.0859780565396!2d108.56253161990284!3d-6.9686930964768425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7403b9ec2ef9f95!2sPondok%20Pesantren%20SYARIF HIDAYATULLAH%20Dukuhdalem!5e0!3m2!1sid!2sid!4v1619074857563!5m2!1sid!2sid"
+                            src="https://www.google.com/maps/place/Pondok+Pesantren+Syarif+Hidayatullah/@-7.0027095,109.6287355,17z/data=!4m6!3m5!1s0x2e7021da55c4ce89:0xbae8628e97c7359c!8m2!3d-7.0027148!4d109.6309242!16s%2Fg%2F11dztxkrj0"
                             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                         <a target="_blank"
-                            href="https://www.google.com/maps?ll=-6.968643,108.562811&z=18&t=m&hl=id&gl=ID&mapclient=embed&daddr=Pondok+Pesantren+SYARIF HIDAYATULLAH+Dukuhdalem+Jl.Balai+Dukuhdalem+Ciawigebang,+Kabupaten+grobogan,+Jawa+Barat+45591@-6.968642999999999,108.5628112"
+                            href=https://www.google.com/maps/place/Pondok+Pesantren+Syarif+Hidayatullah/@-7.0027095,109.6287355,17z/data=!4m6!3m5!1s0x2e7021da55c4ce89:0xbae8628e97c7359c!8m2!3d-7.0027148!4d109.6309242!16s%2Fg%2F11dztxkrj0"
                             class="btn w-100 btn-success"><i class="fa fa-map-signs"></i> Rute</a>
                     </div>
                     <div class="col-md-6 ">
