--- a/index.html
+++ b/index.html
@@ -507,11 +507,10 @@
                 <div class="row">
                     <div class="col-md-6">
                         <iframe
-                            src="https://www.google.com/maps/place/Pondok+Pesantren+Syarif+Hidayatullah/@-7.0027095,109.6287355,17z/data=!4m6!3m5!1s0x2e7021da55c4ce89:0xbae8628e97c7359c!8m2!3d-7.0027148!4d109.6309242!16s%2Fg%2F11dztxkrj0"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d990.0859780565396!2d108.56253161990284!3d-6.9686930964768425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7403b9ec2ef9f95!2sPondok%20Pesantren%20An-Nur%20Dukuhdalem!5e0!3m2!1sid!2sid!4v1619074857563!5m2!1sid!2sid"
                             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
                         <a target="_blank"
-                            href=https://www.google.com/maps/place/Pondok+Pesantren+Syarif+Hidayatullah/@-7.0027095,109.6287355,17z/data=!4m6!3m5!1s0x2e7021da55c4ce89:0xbae8628e97c7359c!8m2!3d-7.0027148!4d109.6309242!16s%2Fg%2F11dztxkrj0"
+                            href="https://www.google.com/maps?ll=-6.968643,108.562811&z=18&t=m&hl=id&gl=ID&mapclient=embed&daddr=Pondok+Pesantren+An-Nur+Dukuhdalem+Jl.Balai+Dukuhdalem+Ciawigebang,+Kabupaten+Kuningan,+Jawa+Barat+45591@-6.968642999999999,108.5628112"
                             class="btn w-100 btn-success"><i class="fa fa-map-signs"></i> Rute</a>
                     </div>
                     <div class="col-md-6 ">
