--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         .banner {
-            background-image: url('./image/IMG-20190530-WA0005.jpg');
+            background-image: url('./image/photo_4.jpeg');
             background-size: cover;
             background-position: center;
             height: 500px;
