--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 
                             <div class="col-lg-3 col-md-4 col-6">
                                 <a href="#" class="d-block mb-4 h-100">
-                                    <img class="img-fluid img-thumbnail" src="./image/photo_1.jpeg" alt="">
+                                    <img class="img-fluid img-thumbnail" src="./image/photo_1.jpg" alt="">
                                 </a>
                             </div>
                             <div class="col-lg-3 col-md-4 col-6">
                                 <a href="#" class="d-block mb-4 h-100">
-                                    <img class="img-fluid img-thumbnail" src="./image/photo_2.jpeg" alt="">
+                                    <img class="img-fluid img-thumbnail" src="./image/photo_2.jpg" alt="">
                                 </a>
                             </div>
                             <div class="col-lg-3 col-md-4 col-6">
@@ -186,6 +186,21 @@
                             <div class="col-lg-3 col-md-4 col-6">
                                 <a href="#" class="d-block mb-4 h-100">
                                     <img class="img-fluid img-thumbnail" src="./image/photo_4.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-6">
+                                <a href="#" class="d-block mb-4 h-100">
+                                    <img class="img-fluid img-thumbnail" src="./image/photo_5.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-6">
+                                <a href="#" class="d-block mb-4 h-100">
+                                    <img class="img-fluid img-thumbnail" src="./image/photo_6.jpeg" alt="">
+                                </a>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-6">
+                                <a href="#" class="d-block mb-4 h-100">
+                                    <img class="img-fluid img-thumbnail" src="./image/photo_7.jpeg" alt="">
                                 </a>
                             </div>
                         </div>
